# LOTC

./: .gitignore  Dockerfile  LICENSE  LOTC_Autonomous_Execution_Prompt.md  LOTC_Enhancement_Action_Plan.md  LOTC_Master_Execution_Prompt.md  Makefile  README.md  environment.yml  generate_academic_fig1.py  learned_optimal_transport_clustering_prompt.md  pyproject.toml  results_summary.md  run_all.ps1
experiments/results/: cifar100_summary.yaml  cifar100_v2.yaml  cifar10_hardened_comparison.yaml  combined_v2_results.yaml  diagnostics.yaml  imbalanced_cifar10_summary.yaml  master_cifar10.yaml  scaling_study.yaml  sensitivity_study.yaml  sensitivity_v2.yaml  severe_imbalance_summary.yaml  stl10_rigorous.yaml  stl10_summary.yaml  stress_tests.yaml  (+1 more)
scripts/: benchmark_grid.py  gen_scaling_full.py  gen_scaling_plots.py  make_figures.py  read_results.py  reproduce_priority1.py  reproduce_priority2.py  run_all_experiments.sh  run_cifar100.py  run_cifar10_v2.py  run_combined_v2.py  run_combined_v3.py  run_diagnostics.py  run_full_benchmark.py  run_imbalanced_cifar10.py  run_imbalanced_v2.py  run_nossl.py  run_ot_baseline.py  run_phase3_scaling.py  run_remaining_v2.py  run_rigorous_eval.py  run_rigorous_tiny_imagenet.py  run_sensitivity_study.py  run_severe_imbalance.py  run_stability_study.py  run_stl10.py  run_stress_tests.py  run_synthetic_v2.py  run_tiny_imagenet.py  statistical_analysis.py  statistical_test.py  visualize_landscape.py
src/: __init__.py
tests/: test_costs.py  test_model.py  test_models.py  test_prototypes.py  test_sinkhorn.py  test_trainer.py
(+48 files in other folders)
